# hotel-management-system

.github/workflows/: backend-ci.yml
backend/: pyproject.toml
backend/app/: main.py
