[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ShreerajM <svmhatre58@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
ruff = "0.2.2"
mypy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
